force-app/main/default/objects/Campos__c/Campos__c.object-meta.xml
<CustomObject>
    <label>Campo</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Campos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>