force-app/main/default/objects/Campos__c/fields/Nombre_Campo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Campo__c</fullName>
    <label>Nombre Campo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>