force-app/main/default/objects/Campos__c/fields/Seccion__c.field-meta.xml
<CustomField>
    <fullName>Seccion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sección</label>
    <referenceTo>Seccion__c</referenceTo>
    <relationshipLabel>Campos</relationshipLabel>
    <relationshipName>Campos</relationshipName>
    <type>Lookup</type>
</CustomField>