force-app/main/default/objects/Campos__c/fields/Tipo_Dato__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Dato__c</fullName>
    <label>Tipo Dato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texto</fullName>
            </value>
            <value>
                <fullName>Texto Largo</fullName>
            </value>
            <value>
                <fullName>Texto Estático</fullName>
            </value>
            <value>
                <fullName>Numérico</fullName>
            </value>
            <value>
                <fullName>Numérico Formato</fullName>
            </value>
            <value>
                <fullName>Lista de Opciones</fullName>
            </value>
            <value>
                <fullName>Lista</fullName>
            </value>
            <value>
                <fullName>Lista Global</fullName>
            </value>
            <value>
                <fullName>Lista de Búsqueda</fullName>
            </value>
            <value>
                <fullName>Fecha</fullName>
            </value>
            <value>
                <fullName>Sí/No/NA</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Foto</fullName>
            </value>
            <value>
                <fullName>Multi-foto</fullName>
            </value>
            <value>
                <fullName>Firma</fullName>
            </value>
            <value>
                <fullName>Casilla</fullName>
            </value>
            <value>
                <fullName>Locación</fullName>
            </value>
            <value>
                <fullName>Vista Previa</fullName>
            </value>
            <value>
                <fullName>Hpervinculo</fullName>
            </value>
            <value>
                <fullName>QR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>