force-app/main/default/objects/Campos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Nombre_Campo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>